--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "client": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
