--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.10.0",
+    "@livekit/components-react": "^1.5.3",
+    "@livekit/components-styles": "^1.1.4",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -33,12 +35,14 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
+    "livekit-client": "^1.13.0",
+    "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
